--- a/ZIPPLZ_FE/tsconfig.json
+++ b/ZIPPLZ_FE/tsconfig.json
@@ -11,7 +11,8 @@
       "@assets/*": ["assets/*"],
       "@components/*": ["components/*"],
       "@pages/*": ["pages/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@store/*": ["store/*"]
     },
 
     /* Bundler mode */
