--- a/ZIPPLZ_BE/src/main/resources/application.properties
+++ b/ZIPPLZ_BE/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=ZIPPLZ_BE
+server.port: 5000
+server.ssl.enabled: false
+
+OPENVIDU_URL: http://localhost:4443/
+OPENVIDU_SECRET: MY_SECRET
+
+spring.datasource.url=jdbc:mysql://localhost:3306/zipplz
+spring.datasource.username=ssafy
+spring.datasource.password=ssafy
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+server.servlet.context-path=/zipplz
+
+# Spring Security ?? ??
+#spring.security.user.name=user
+#spring.security.user.password=password
+
+# ?? ?? ?? ?? (INFO ????? ?? ??? ???)
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.security=INFO
