--- a/ZIPPLZ_BE/src/main/resources/application.properties
+++ b/ZIPPLZ_BE/src/main/resources/application.properties
@@ -5,17 +5,13 @@ server.ssl.enabled: false
 OPENVIDU_URL: http://localhost:4443/
 OPENVIDU_SECRET: MY_SECRET
 
-spring.datasource.url=jdbc:mysql://localhost:3306/zipplz
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ZIP_PLZ?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.servlet.context-path=/zipplz
 
-# Spring Security ?? ??
-#spring.security.user.name=user
-#spring.security.user.password=password
-
-# ?? ?? ?? ?? (INFO ????? ?? ??? ???)
-logging.level.org.springframework.web=INFO
-logging.level.org.springframework.security=INFO
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
