FEAT: 세션 연결 해제 API 추가

--- a/ZIPPLZ_BE/src/main/resources/application.properties
+++ b/ZIPPLZ_BE/src/main/resources/application.properties
@@ -15,3 +15,7 @@ server.servlet.context-path=/zipplz
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
