--- a/ZIPPLZ_FE/package.json
+++ b/ZIPPLZ_FE/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/react-modal": "^3.16.3",
     "@tanstack/react-query": "^5.51.11",
+    "@types/react-modal": "^3.16.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.2",
     "openvidu-browser": "^2.30.1",
