--- a/ZIPPLZ_FE/package.json
+++ b/ZIPPLZ_FE/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@types/react-modal": "^3.16.3",
+    "@tanstack/react-query": "^5.51.11",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.2",
+    "openvidu-browser": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
