ADD: custom hook 절대경로 추가 및 store 폴더명 stores로 변경, userStore에 임시 목업유저데이터 삽입

--- a/ZIPPLZ_FE/tsconfig.json
+++ b/ZIPPLZ_FE/tsconfig.json
@@ -12,7 +12,8 @@
       "@components/*": ["components/*"],
       "@pages/*": ["pages/*"],
       "@utils/*": ["utils/*"],
-      "@store/*": ["store/*"]
+      "@hooks/*": ["hooks/*"],
+      "@stores/*": ["stores/*"]
     },
 
     /* Bundler mode */
