--- a/ZIPPLZ_BE/build.gradle
+++ b/ZIPPLZ_BE/build.gradle
@@ -27,16 +27,18 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket' 	// websocket 관련
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis' 	// redis 관련
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
-	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
-	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.3' 		// jwt 관련
+	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'		// jwt 관련
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'	// jwt 관련
+
 }
 
 tasks.named('test') {
