--- a/ZIPPLZ_FE/Dockerfile
+++ b/ZIPPLZ_FE/Dockerfile
@@ -1,8 +1,8 @@
 # 베이스 이미지 설정
-FROM node:14
+FROM node:20.5.1
 
 # 작업 디렉토리 설정
-WORKDIR /usr/src/app
+WORKDIR /ZIPPLZ_FE/src/index.html
 
 # 의존성 설치
 COPY package*.json ./
@@ -12,8 +12,7 @@ RUN npm install
 COPY . .
 
 # 애플리케이션이 사용하는 포트 공개
-EXPOSE 3000
+EXPOSE 4443
 
 # 애플리케이션 시작 명령어
-CMD ["npm", "start"]
-
+CMD ["npm", "run", "start"]
