--- a/ZIPPLZ_BE/src/main/resources/application.properties
+++ b/ZIPPLZ_BE/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.datasource.password=ssafy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #server.servlet.context-path=/zipplz
-
-spring.jpa.hibernate.ddl-auto=update
+spring.jwt.secret = aW1lbmNvZGluZ3RoaXNmb3JzZWNyZXRrZXl1c2VkaW5vdXJqd3RzZXJ2aWN
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
