--- a/ZIPPLZ_BE/build.gradle
+++ b/ZIPPLZ_BE/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.3' 		// jwt 관련
 	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'		// jwt 관련
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'	// jwt 관련
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'	// OAuth2 관련
 }
 
 tasks.named('test') {
