--- a/ZIPPLZ_FE/.env.sample
+++ b/ZIPPLZ_FE/.env.sample
@@ -1,3 +1,3 @@
-OPENVIDU_RECORDING=
-OPENVIDU_RECORDING_PATH=
-VITE_BASE_URL = 
+OPENVIDU_RECORDING=""
+OPENVIDU_RECORDING_PATH=""
+VITE_APP_BASE_URL = ""
