REFACTOR: 절대경로 수정 및 노란줄 제거

--- a/ZIPPLZ_FE/tsconfig.json
+++ b/ZIPPLZ_FE/tsconfig.json
@@ -13,7 +13,8 @@
       "@pages/*": ["pages/*"],
       "@utils/*": ["utils/*"],
       "@hooks/*": ["hooks/*"],
-      "@stores/*": ["stores/*"]
+      "@stores/*": ["stores/*"],
+      "@apis/*": ["apis/*"]
     },
 
     /* Bundler mode */
