--- a/ZIPPLZ_FE/package.json
+++ b/ZIPPLZ_FE/package.json
@@ -15,9 +15,11 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.51.11",
     "@types/react-modal": "^3.16.3",
     "@types/react-router-dom": "^5.3.3",
+    "@types/stompjs": "^2.3.9",
     "axios": "^1.7.2",
     "openvidu-browser": "^2.30.1",
     "react": "^18.3.1",
@@ -26,8 +28,8 @@
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.1",
-    "swiper": "^11.1.7",
     "react-spinners": "^0.14.1",
+    "swiper": "^11.1.7",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
