FEAT:  채팅방 불러오기 작업중

--- a/ZIPPLZ_FE/.env.sample
+++ b/ZIPPLZ_FE/.env.sample
@@ -1,2 +1,6 @@
 VITE_APP_BASE_URL=''
 VITE_APP_AUTH_TOKEN=''
+VITE_APP_CHAT_TOKEN=''
+VITE_APP_CHAT_URL=''
+VITE_GOOGLE_LOGIN_URL =''
+VITE_KAKAO_LOGIN_URL =''
