--- a/ZIPPLZ_BE/build.gradle
+++ b/ZIPPLZ_BE/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket' 	// websocket 관련
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis' 	// redis 관련
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' //S3 관련
 	implementation 'io.openvidu:openvidu-java-client:2.28.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
