--- a/ZIPPLZ_FE/package.json
+++ b/ZIPPLZ_FE/package.json
@@ -24,6 +24,7 @@
     "js-cookie": "^3.0.5",
     "openvidu-browser": "^2.30.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
