--- a/ZIPPLZ_BE/src/main/resources/application.properties
+++ b/ZIPPLZ_BE/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port: 5000
 server.ssl.enabled: false
 
 // ?????? ??
-OPENVIDU_URL: http://localhost:4443/
+OPENVIDU_URL: http://i11a602.p.ssafy.io:4443/
 OPENVIDU_SECRET: MY_SECRET
 
 // database MySql ??
