--- a/ZIPPLZ_FE/package.json
+++ b/ZIPPLZ_FE/package.json
@@ -31,12 +31,13 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.13.0",
     "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.0",
     "react-spinners": "^0.14.1",
-    "swiper": "^11.1.7",
     "remark-gfm": "^4.0.0",
+    "swiper": "^11.1.7",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
