REFACTOR: 설정 변경

--- a/ZIPPLZ_BE/src/main/resources/application.properties
+++ b/ZIPPLZ_BE/src/main/resources/application.properties
@@ -2,15 +2,19 @@ spring.application.name=ZIPPLZ_BE
 server.port: 5000
 server.ssl.enabled: false
 
+spring.jackson.time-zone=Asia/Seoul
+
 OPENVIDU_URL: http://localhost:4443/
 OPENVIDU_SECRET: MY_SECRET
 
+// database MySql ??
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ZIP_PLZ?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jwt.secret = JWT_SECRET
+// jwt ??
+spring.jwt.secret = jwt
 
 #server.servlet.context-path=/zipplz
 spring.jpa.hibernate.ddl-auto=none
@@ -20,3 +24,38 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
+
+#oauth2 google
+spring.security.oauth2.client.registration.google.client-id=470120292420-n4qn99hg68ut200or9kbslb9dec62sgs.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=profile, email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.google.client-name=Google
+
+#oauth2 kakao
+spring.security.oauth2.client.registration.kakao.client-name=kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.client-id=e9d55507107ccc6780372f7281c4ba78
+spring.security.oauth2.client.registration.kakao.client-secret=dvnjYca9UmmcZ3Uvf7GBgdyNQeqWHFwm
+spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,profile_image,account_email
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+
+#mongodb
+spring.data.mongodb.uri=mongodb+srv://dbUser:qwer1234@cluster0.lwu0lfm.mongodb.net/chatting?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.auto-index-creation=true
+
+#Bean overriding
+spring.main.allow-bean-definition-overriding=true
+
+# S3
+cloud.aws.credentials.accessKey=AKIARLOIIAKPNSEHWMVZ
+cloud.aws.credentials.secretKey=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
+cloud.aws.s3.bucketName=zipplzbucket
+cloud.aws.region.static=us-east-1
+cloud.aws.stack.auto-=false
