--- a/ZIPPLZ_FE/package.json
+++ b/ZIPPLZ_FE/package.json
@@ -34,8 +34,10 @@
     "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.0",
+    "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
     "remark-gfm": "^4.0.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.9",
     "zustand": "^4.5.4"
   },
