--- a/ZIPPLZ_FE/package.json
+++ b/ZIPPLZ_FE/package.json
@@ -24,6 +24,8 @@
     "axios": "^1.7.2",
     "base-64": "^1.0.0",
     "js-cookie": "^3.0.5",
+    "npyjs": "^0.6.0",
+    "onnxruntime-web": "^1.18.0",
     "openvidu-browser": "^2.30.1",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
@@ -40,6 +42,7 @@
     "remark-gfm": "^4.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.9",
+    "underscore": "^1.13.7",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
@@ -56,6 +59,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
+    "sass": "^1.77.8",
     "tailwindcss": "^3.4.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.2.2",
