FEAT: elasticSearch, openai 의존성 추가

--- a/ZIPPLZ_BE/build.gradle
+++ b/ZIPPLZ_BE/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' //S3 관련
 	implementation 'io.openvidu:openvidu-java-client:2.28.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
