--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "editor.fontFamily": "'Play', Ebrima, '비트로 프라이드', 나눔스퀘어, Berlin Sans",
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
-    "java.compile.nullAnalysis.mode": "disabled"
+    "java.compile.nullAnalysis.mode": "disabled",
+    "cSpell.ignoreWords": ["OPENVIDUAPP", "openvidu", "vidu"]
 }
