--- a/ZIPPLZ_BE/src/main/resources/application.properties
+++ b/ZIPPLZ_BE/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.ssl.enabled: true
 OPENVIDU_URL: http://i11a602.p.ssafy.io:4443/
 OPENVIDU_SECRET: MY_SECRET
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ZIP_PLZ
+spring.datasource.url=jdbc:mysql://i11a602.p.ssafy.io:3306/ZIP_PLZ
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
