FEAT: 로그인 유무에 따른 접근제한 라우팅 설정

--- a/ZIPPLZ_FE/tsconfig.json
+++ b/ZIPPLZ_FE/tsconfig.json
@@ -15,8 +15,9 @@
       "@hooks/*": ["hooks/*"],
       "@stores/*": ["stores/*"],
       "@apis/*": ["apis/*"],
-      "@/types/*": ["types/*"],
-      "@styles/*": ["styles/*"]
+      "@styles/*": ["styles/*"],
+      "@router/*": ["router/*"],
+      "@/types/*": ["types/*"]
     },
 
     /* Bundler mode */
