REFATOR: 코드 스플리팅 적용
-로딩시간 단축
-성능향상

--- a/ZIPPLZ_FE/package.json
+++ b/ZIPPLZ_FE/package.json
@@ -15,9 +15,11 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@loadable/component": "^5.16.4",
     "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.51.11",
     "@types/js-cookie": "^3.0.6",
+    "@types/loadable__component": "^5.13.9",
     "@types/react-modal": "^3.16.3",
     "@types/react-router-dom": "^5.3.3",
     "@types/stompjs": "^2.3.9",
@@ -34,6 +36,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
+    "react-loader-spinner": "^6.1.6",
     "react-loading-skeleton": "^3.4.0",
     "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
