--- a/ZIPPLZ_BE/src/main/resources/application.properties
+++ b/ZIPPLZ_BE/src/main/resources/application.properties
@@ -27,14 +27,14 @@ spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
 spring.security.oauth2.client.registration.google.client-id=470120292420-n4qn99hg68ut200or9kbslb9dec62sgs.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile, email
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.redirect-uri=https://zipplz.site/api/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.google.client-name=Google
 
 #oauth2 kakao
 spring.security.oauth2.client.registration.kakao.client-name=kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.redirect-uri=https://zipplz.site/api/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.client-id=e9d55507107ccc6780372f7281c4ba78
 spring.security.oauth2.client.registration.kakao.client-secret=dvnjYca9UmmcZ3Uvf7GBgdyNQeqWHFwm
 spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
