--- a/ZIPPLZ_BE/src/main/resources/application.properties
+++ b/ZIPPLZ_BE/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ZIPPLZ_BE
 server.port: 5000
 server.ssl.enabled: true
 
-OPENVIDU_URL: http://i11a602.p.ssafy.io:4443/
+OPENVIDU_URL: https://i11a602.p.ssafy.io:4443/
 OPENVIDU_SECRET: MY_SECRET
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ZIP_PLZ
