--- a/ZIPPLZ_BE/src/main/resources/application.properties
+++ b/ZIPPLZ_BE/src/main/resources/application.properties
@@ -45,7 +45,7 @@ spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/o
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 
 #mongodb
-spring.data.mongodb.uri=mongodb+srv://dbUser:1dlrkdms@cluster0.lwu0lfm.mongodb.net/chatting?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri=mongodb+srv://dbUser:qwer1234@cluster0.lwu0lfm.mongodb.net/chatting?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.auto-index-creation=true
 
 #Bean overriding
